--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,10 @@
         {% endif %}
       {% endfor %}
 
+      {% comment %}
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/master.zip">Download</a>
+      {% comment %}
+      
       <hr>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
