--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
 
       {% comment %}
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/master.zip">Download</a>
-      {% comment %}
+      {% endcomment %}
       
       <hr>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
