--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <img src="/public/images/mypic.png" alt="Image Alt Text">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
