--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,12 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="/public/images/mypic.png" alt="Image Alt Text">
+      <img src="/public/images/mypic.png" alt="Image Alt Text" width="70%">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
-      </h5>
+      </h2>
       <p class="lead">{{ site.description }}</p>
     </div>
 
