--- a/_layouts/none.html
+++ b/_layouts/none.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="none">
-  <h1 class="none-page-title">{{ page.title }}</h1>
+<div class="page1">
+  <h1 class="page1-title">{{ page.title }}</h1>
   {{ content }}
 </div>
